WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293521
[macOS] Mitigate sync IPC hangs under WebViewImpl::writeSelectionToPasteboard()
https://bugs.webkit.org/show_bug.cgi?id=293521
Summary
[macOS] Mitigate sync IPC hangs under WebViewImpl::writeSelectionToPasteboard()
Wenson Hsieh
Reported
2025-05-23 16:42:16 PDT
rdar://151923464
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-05-23 17:09:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45868
EWS
Comment 2
2025-05-24 09:06:21 PDT
Committed
295393@main
(0f81719cec3c): <
https://commits.webkit.org/295393@main
> Reviewed commits have been landed. Closing PR #45868 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug